--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: linear-gradient(180deg, #57eecd, #63b9f3);
+  background-attachment: fixed;
+}
